overlays/appliance/patch-service-nodeport.yaml
apiVersion: extensions/v1beta1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 3000
