overlays/appliance/resource-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
